# vlc

./: .gitignore  CUDA_SESSION_HANDOVER.md  CUDA_VICTORY.md  Cargo.toml  DOCUMENTATION_AUDIT.md  HANDOVER_SUMMARY.md  M3_COMPLETION.md  NEXT_SESSION.md  PROJECT_SUMMARY.md  README.md  STATUS.md  WSL2_GPU_RESEARCH.md  build.rs
docs/: DESIGN.md  HANDOVER.md  KERNELS.md  M2_HANDOVER.md  SONNET_GUIDE.md
docs/wgpu-reference/: 01-device-queue-initialization.md  02-compute-pipeline-creation.md  03-buffer-management.md  04-compute-dispatch-sync.md  05-bind-groups-resources.md  06-device-polling-state.md  07-error-handling-patterns.md  08-compatibility-analysis.md  README.md
src/: anneal.rs  io.rs  lib.rs  retrieval.rs  types.rs
src/gpu/: context.rs  kernels.rs  mod.rs  ops.rs
src/gpu/cuda/: context.rs  kernels.cu  kernels.ptx  mod.rs  ops.rs
src/gpu/shaders/: assign.wgsl  reduce.wgsl  update.wgsl
src/ops/: cpu.rs  maintenance.rs  mod.rs
